<?xml version="1.0" encoding="UTF-8"?>
<!--
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-parent</artifactId>
    <version>64</version>
  </parent>

  <artifactId>commons-digester3-parent</artifactId>
  <version>3.3-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Apache Commons Digester</name>
  <description>
    The Apache Commons Digester package lets you configure an XML to Java
    object mapping module which triggers certain actions called rules whenever
    a particular pattern of nested XML elements is recognized.
  </description>
  <url>http://commons.apache.org/proper/commons-digester/</url>
  <inceptionYear>2001</inceptionYear>

  <developers>
    <developer>
      <name>Craig McClanahan</name>
      <id>craigmcc</id>
      <email>craigmcc@apache.org</email>
    </developer>
    <developer>
      <name>Robert Burrell Donkin</name>
      <id>rdonkin</id>
      <email>rdonkin@apache.org</email>
    </developer>
    <developer>
      <name>Scott Sanders</name>
      <id>sanders</id>
      <email>sanders@totalsync.com</email>
    </developer>
    <developer>
      <name>James Strachan</name>
      <id>jstrachan</id>
      <email>jstrachan@apache.org</email>
    </developer>
    <developer>
      <name>Jason van Zyl</name>
      <id>jvanzyl</id>
      <email>jvanzyl@apache.org</email>
    </developer>
    <developer>
      <name>Tim OBrien</name>
      <id>tobrien</id>
      <email>tobrien@apache.org</email>
    </developer>
    <developer>
      <name>Jean-Francois Arcand</name>
      <id>jfarcand</id>
      <email>jfarcand@apache.org</email>
    </developer>
    <developer>
      <name>Simon Kitching</name>
      <id>skitching</id>
      <email>skitching@apache.org</email>
    </developer>
    <developer>
      <name>Rahul Akolkar</name>
      <id>rahul</id>
      <email>rahul AT apache DOT org</email>
    </developer>
    <developer>
      <name>Simone Tripodi</name>
      <id>simonetripodi</id>
      <email>simonetripodi AT apache DOT org</email>
    </developer>
    <developer>
      <name>Matt Benson</name>
      <id>mbenson</id>
      <email>mbenson AT apache DOT org</email>
    </developer>
    <developer>
      <id>ggregory</id>
      <name>Gary Gregory</name>
      <email>ggregory at apache.org</email>
      <url>https://www.garygregory.com</url>
      <organization>The Apache Software Foundation</organization>
      <organizationUrl>https://www.apache.org/</organizationUrl>      
      <roles>
        <role>PMC Member</role>
      </roles>
      <timezone>America/New_York</timezone>
      <properties>
        <picUrl>https://people.apache.org/~ggregory/img/garydgregory80.png</picUrl>
      </properties>
    </developer>
  </developers>
  <contributors>
    <contributor>
      <name>Bradley M. Handy</name>
      <email>bhandy@users.sf.net</email>
    </contributor>
    <contributor>
      <name>Christopher Lenz</name>
    </contributor>
    <contributor>
      <name>Ted Husted</name>
    </contributor>
    <contributor>
      <name>David H. Martin</name>
    </contributor>
    <contributor>
      <name>Henri Chen</name>
    </contributor>
    <contributor>
      <name>Janek Bogucki</name>
    </contributor>
    <contributor>
      <name>Mark Huisman</name>
    </contributor>
    <contributor>
      <name>Paul Jack</name>
    </contributor>
    <contributor>
      <name>Anton Maslovsky</name>
    </contributor>
    <contributor>
      <name>Matt Cleveland</name>
    </contributor>
    <contributor>
      <name>Gabriele Carcassi</name>
    </contributor>
    <contributor>
      <name>Wendy Smoak</name>
      <email>java@wendysmoak.com</email>
    </contributor>
    <contributor>
      <name>Kevin Ross</name>
      <email>kevin.ross@iverticalleap.com</email>
    </contributor>
    <contributor>
      <name>Daniele Testa</name>
      <email>mrwolfgraphics AT gmail DOT com</email>
      <roles>
        <role>graphic designer</role>
      </roles>
    </contributor>
    <contributor>
      <name>Torsten Krah</name>
      <email>tkrah AT fachschaft DOT imn DOT htwk-leipzig DOT de</email>
    </contributor>
    <contributor>
      <name>Frank David Martinez</name>
      <email>mnesarco at gmail dot com</email>
    </contributor>
    <contributor>
      <name>Dirk Schaube</name>
      <email>Dirk dot Schaube at dwpbank dot de</email>
    </contributor>
    <contributor>
      <name>Ivan Diana</name>
      <email>iwo dot diana at gmail dot com</email>
    </contributor>
  </contributors>

  <scm>
    <connection>scm:git:https://gitbox.apache.org/repos/asf/commons-digester</connection>
    <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/commons-digester</developerConnection>
    <url>https://gitbox.apache.org/repos/asf/commons-digester</url>
  </scm>
  <issueManagement>
    <system>jira</system>
    <url>http://issues.apache.org/jira/browse/DIGESTER</url>
  </issueManagement>

  <distributionManagement>
    <site>
      <id>apache.website</id>
      <name>Apache Commons Site</name>
      <url>scm:svn:${commons.scmPubUrl}</url>
    </site>
  </distributionManagement>

  <modules>
    <module>commons-digester3-core</module>
    <!-- >module>annotations-processor</module -->
    <module>commons-digester3-examples</module>
    <module>commons-digester3-dist</module>
  </modules>

  <properties>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <commons.componentid>digester</commons.componentid>
    <commons.module.name>org.apache.commons.digester3</commons.module.name>
    <commons.release.version>3.3</commons.release.version>
    <commons.release.desc>(minimum JDK 7)</commons.release.desc>
    <commons.release.2.version>2.1</commons.release.2.version>
    <commons.release.2.desc>(minimum JDK 1.5)</commons.release.2.desc>
	<!-- Override the default, which is ${project.artifactId}-${commons.release.[23].version} -->
    <commons.release.name>commons-digester3-${commons.release.version}</commons.release.name>
    <commons.release.2.name>commons-digester-${commons.release.2.version}</commons.release.2.name>
    <commons.rc.version>RC1</commons.rc.version>
    <commons.jira.id>DIGESTER</commons.jira.id>
    <commons.jira.pid>12310471</commons.jira.pid>

    <commons.scmPubUrl>https://svn.apache.org/repos/infra/websites/production/commons/content/proper/commons-digester</commons.scmPubUrl>
  </properties>

  <build>
    <defaultGoal>clean verify pmd:cpd-check</defaultGoal>
    <plugins>
      <plugin>
        <!--
          - A number of the pre-maven test case "support" classes have names starting with Test.
          - This confuses the maven surefire "auto-detect test case" functionality, so we
          - need to manually exclude them.
          -->
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>**/TestBean.java</exclude>
            <exclude>**/TestRule.java</exclude>
            <exclude>**/TestRuleSet.java</exclude>
            <exclude>**/Test*$*.java</exclude>
          </excludes>
          <systemPropertyVariables>
            <!-- Suppress most logging output -->
            <org.apache.commons.logging.Log>org.apache.commons.logging.impl.SimpleLog</org.apache.commons.logging.Log>
            <org.apache.commons.logging.simplelog.defaultlog>fatal</org.apache.commons.logging.simplelog.defaultlog>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <!-- TODO remove when upgrading to parent 28 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-scm-publish-plugin</artifactId>
        <version>1.0-beta-2</version>
        <configuration>
          <content>${project.reporting.outputDirectory}</content>
          <pubScmUrl>scm:svn:${commons.scmPubUrl}</pubScmUrl>
          <checkoutDirectory>site-content</checkoutDirectory>
          <tryUpdate>true</tryUpdate>
          <ignorePathsToDelete>
            <ignorePathToDelete>commons-digester-*</ignorePathToDelete>
          </ignorePathsToDelete>
        </configuration>
        <executions>
          <execution>
            <id>scm-publish</id>
            <phase>site-deploy</phase><!-- deploy site with maven-scm-publish-plugin -->
            <goals>
              <goal>publish-scm</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>

    <pluginManagement>
      <plugins>
        <!-- TODO remove when upgrading to parent 28 -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.2</version>
          <configuration>
            <!-- don't deploy site with maven-site-plugin -->
            <skipDeploy>true</skipDeploy>
          </configuration>
        </plugin>
        <!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <!-- Can't be resolved, where does it live ?
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId> org.apache.maven.plugins </groupId>
                    <artifactId> maven-antrun-plugin </artifactId>
                    <versionRange>[1.6,)</versionRange>
                    <goals>
                      <goal>run</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <versionRange>[2.3.5,)</versionRange>
                    <goals>
                      <goal>manifest</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <aggregate>true</aggregate>
          <linksource>true</linksource>
          <links>
            <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
            <link>http://commons.apache.org/beanutils/v1.8.3/apidocs/</link>
          </links>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.5</version>
        <configuration>
          <threshold>Normal</threshold>
          <effort>Default</effort>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changes-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>changes-report</report>
              <report>jira-report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <targetJdk>1.5</targetJdk>
        </configuration>
        <!--Use default rules-->
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>rc</id>
      <distributionManagement>
        <!-- Cannot define in parent ATM, see COMMONSSITE-26 -->
        <site>
          <id>apache.website</id>
          <name>Apache Commons Release Candidate Staging Site</name>
          <url>${commons.deployment.protocol}://people.apache.org/www/people.apache.org/builds/commons/${commons.componentid}/${commons.release.version}/${commons.rc.version}/site</url>
        </site>
      </distributionManagement>
    </profile>
    <profile>
      <id>release</id>
      <distributionManagement>
        <!-- Cannot define in parent ATM, see COMMONSSITE-26 -->
        <site>
          <id>people.apache.org</id>
          <name>Apache Commons Site</name>
          <url>${commons.deployment.protocol}://people.apache.org/www/commons.apache.org/digester</url>
        </site>
      </distributionManagement>
    </profile>
    <profile>
      <id>java17</id>
      <activation>
        <jdk>[17,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>
                --illegal-access=permit
                --add-opens java.base/java.lang=ALL-UNNAMED                     
              </argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>
</project>
